# idaas-python-core-sdk

./: DESGIN.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: publish.yml
cloud_idaas/: __init__.py
cloud_idaas/core/: __init__.py  constants.py  credential.py  domain.py  exceptions.py
cloud_idaas/core/cache/: __init__.py  cached_result_supplier.py  prefetch_strategy.py  refresh_result.py  stale_value_behavior.py
cloud_idaas/core/cache/strategy/: __init__.py  non_blocking_prefetch_strategy.py  one_caller_blocks_prefetch_strategy.py
cloud_idaas/core/config/: __init__.py  http_configuration.py  idaas_client_config.py  identity_authentication_configuration.py  user_agent_config.py
cloud_idaas/core/factory/: __init__.py  idaas_credential_provider_factory.py
cloud_idaas/core/http/: __init__.py  content_type.py  default_http_client.py  http_client.py  http_method.py  http_request.py  http_response.py  oauth2_token_util.py
cloud_idaas/core/implementation/: __init__.py  abstract_refreshed_credential_provider.py  idaas_machine_credential_provider.py  idaas_machine_token_exchange_credential_provider.py  static_idaas_credential_provider.py
cloud_idaas/core/implementation/authentication/: __init__.py
cloud_idaas/core/implementation/authentication/jwt/: __init__.py  static_client_secret_assertion_provider.py  static_private_key_assertion_provider.py
cloud_idaas/core/implementation/authentication/oidc/: __init__.py  file_oidc_token_provider.py  static_oidc_token_provider.py
cloud_idaas/core/implementation/authentication/pkcs7/: __init__.py  alibaba_cloud_ecs_attested_document_provider.py  aws_ec2_pkcs7_attested_document_provider.py  static_pkcs7_attested_document_provider.py
cloud_idaas/core/provider/: __init__.py  idaas_credential_provider.py  idaas_token_exchange_credential_provider.py  jwt_client_assertion_provider.py  oidc_token_provider.py  pkcs7_attested_document_provider.py  plugin_credential_provider.py  refresh_credential_provider.py
cloud_idaas/core/util/: __init__.py  browser_util.py  config_reader.py  exception_analyzer.py  file_util.py  json_util.py  normalize_util.py  pki_util.py  plugin_credential_provider_util.py  request_util.py  scope_util.py  string_util.py  validator_util.py
samples/: README.md  client_secret_authentication.py  human_authentication.py  token_exchange_with_client_secret_authentication.py
tests/: test_config_from_dict.py  test_config_parsing.py  test_constants.py  test_credential.py  test_domain.py  test_exceptions.py  test_idaas_unexpected_exception.py
tests/cache/: test_cached_result_supplier.py  test_non_blocking_prefetch_strategy.py  test_one_caller_blocks_prefetch_strategy.py  test_prefetch_strategy.py  test_refresh_result.py  test_stale_value_behavior.py
tests/config/: test_config.json  test_http_configuration.py  test_idaas_client_config.py  test_identity_authentication_configuration.py  test_user_agent_config.py
tests/factory/: test_idaas_credential_provider_factory.py  test_idaas_credential_provider_factory_unit.py
tests/http_module/: test_content_type.py  test_default_http_client.py  test_http_client.py  test_http_method.py  test_http_request.py  test_http_response.py  test_oauth2_token_util.py
tests/implementation/: test_abstract_refreshed_credential_provider.py  test_idaas_machine_credential_provider.py  test_idaas_machine_token_exchange_credential_provider.py  test_static_idaas_credential_provider.py
tests/implementation/authentication/jwt/: test_static_client_secret_assertion_provider.py  test_static_private_key_assertion_provider.py
tests/implementation/authentication/oidc/: test_file_oidc_token_provider.py  test_static_oidc_token_provider.py
tests/implementation/authentication/pkcs7/: test_alibaba_cloud_ecs_attested_document_provider.py  test_aws_ec2_pkcs7_attested_document_provider.py  test_static_pkcs7_attested_document_provider.py
tests/provider/: test_idaas_credential_provider.py  test_idaas_token_exchange_credential_provider.py  test_jwt_client_assertion_provider.py  test_oidc_token_provider.py  test_pkcs7_attested_document_provider.py  test_refresh_credential_provider.py
tests/util/: test_browser_util.py  test_config_reader.py  test_exception_analyzer.py  test_file_util.py  test_json_util.py  test_normalize_util.py  test_pki_util.py  test_request_util.py  test_scope_util.py  test_string_util.py  test_token_authn_method.py
