[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-idaas-core"
version = "0.0.1a0"
description = "Python SDK for IDaaS (Identity as a Service) M2M product"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["IDaaS", "IDaaS SDK"]
authors = [
    {name = "Alibaba IDaaS Team", email = "idaas@alibaba-inc.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "cryptography>=45.0.4",
    "PyJWT>=2.8.0",
    "urllib3>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.900",
    "twine>=3.4.0",
    "build>=0.7.0",
]

[project.urls]
Homepage = "http://gitlab.alibaba-inc.com/aliyunidaas-lab/idaas-python-core-sdk"
"Bug Reports" = "http://gitlab.alibaba-inc.com/aliyunidaas-lab/idaas-python-core-sdk/issues"
Source = "http://gitlab.alibaba-inc.com/aliyunidaas-lab/idaas-python-core-sdk"
Documentation = "http://gitlab.alibaba-inc.com/aliyunidaas-lab/idaas-python-core-sdk"

[tool.setuptools.packages.find]
exclude = ["tests*", ".venv*", "build*", "dist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120